Auutomate object cleanup. Don't require explicit initialize/finalize

--- a/examples/FiPy/diffusion.ipynb
+++ b/examples/FiPy/diffusion.ipynb
@@ -322,7 +322,7 @@
     "        \"\"\"\n",
     "        self.config_dict = config_dict\n",
     "        self.cfg = pyamgx.Config().create_from_dict(self.config_dict)\n",
-    "        self.resources = pyamgx.Resources().create_simple(self.cfg)\n",
+    "        self.resources = pyamgx.Resources(self.cfg)\n",
     "        self.x_gpu = pyamgx.Vector().create(self.resources)\n",
     "        self.b_gpu = pyamgx.Vector().create(self.resources)\n",
     "        self.A_gpu = pyamgx.Matrix().create(self.resources)\n",
